--- a/main/index.html
+++ b/main/index.html
@@ -4,10 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script>document.getElementsByTagName("html")[0].className += " js";</script>
-  <link id="codyframe" rel="stylesheet" href="assets/css/style.css">
-  <title>Get Started | CodyFrame</title>
+  <link id="codyframe" rel="stylesheet" href="./assets/css/style.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <title>Frontend Mentor | Designo Agency Website Challenge</title>
 </head>
 <body>
+  <div class="content-wrapper">
+    <header class="header">
+      <nav class="nav">
+        <img class="nav__logo" src="./assets/images/shared/desktop/logo-dark.png" alt="designo logo">
+        <ul class="nav__list">
+          <li><a href="about.html">Our Company</a></li>
+          <li><a href="locations.html">Locations</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    <div class="hero">
+      <div class="container">
+        <div class="article text-component">
+          <h1>Award-winning custom designs and digital branding solutions</h1>
+          <p>With over 10 years in the industry, we are experienced in creating fully responsive websites, app design,
+          and engaging brand experiences. Find out more about our services.</p>
+          <div class="btn btn--subtle"><a href="about.html">Learn more</a></div>
+        </div>
+      </div>
+    </div>
+    </header>
+  </div>
 <script src="assets/js/scripts.js"></script>
 </body>
 </html>
