add image of mobile phone

--- a/main/index.html
+++ b/main/index.html
@@ -27,6 +27,7 @@
           and engaging brand experiences. Find out more about our services.</p>
           <div class="btn btn--subtle"><a href="about.html">Learn more</a></div>
         </div>
+        <div class="hero__image"><img src="./assets/images/home/desktop/image-hero-phone.png" alt="mobile phone with image of lamp"></div>
       </div>
     </div>
     </header>
