complete image card component html

--- a/main/index.html
+++ b/main/index.html
@@ -19,19 +19,41 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
-    <div class="hero">
-      <div class="container">
-        <div class="article text-component">
-          <h1>Award-winning custom designs and digital branding solutions</h1>
-          <p>With over 10 years in the industry, we are experienced in creating fully responsive websites, app design,
-          and engaging brand experiences. Find out more about our services.</p>
-          <div class="btn btn--subtle"><a href="about.html">Learn more</a></div>
+      <div class="hero">
+        <div class="container">
+          <div class="article text-component">
+            <h1>Award-winning custom designs and digital branding solutions</h1>
+            <p>With over 10 years in the industry, we are experienced in creating fully responsive websites, app design,
+            and engaging brand experiences. Find out more about our services.</p>
+            <div class="btn btn--subtle"><a href="about.html">Learn more</a></div>
+          </div>
+          <div class="hero__image"><img src="./assets/images/home/desktop/image-hero-phone.png" alt="mobile phone with image of lamp"></div>
         </div>
-        <div class="hero__image"><img src="./assets/images/home/desktop/image-hero-phone.png" alt="mobile phone with image of lamp"></div>
       </div>
-    </div>
     </header>
   </div>
+  <main>
+    <section class="web-design">
+      <a class="image-card" href="web-design.html"></a>
+        <div class="text-component">
+          <h2 class="image-card__title">Web Design</h2>
+          <p class="image-card__text">View Projects</p>
+        </div>
+      </a>
+      <a class="image-card" href="app-design.html"></a>
+        <div class="text-component">
+          <h2 class="image-card__title">App Design</h2>
+          <p class="image-card__text">View Projects</p>
+        </div>
+      </a>
+      <a class="image-card" href="graphic-design.html"></a>
+        <div class="text-component">
+          <h2 class="image-card__title">Graphic Design</h2>
+          <p class="image-card__text">View Projects</p>
+        </div>
+      </a>
+    </section>
+  </main>
 <script src="assets/js/scripts.js"></script>
 </body>
 </html>
