--- a/main/index.html
+++ b/main/index.html
@@ -33,26 +33,61 @@
     </header>
   </div>
   <main>
-    <section class="web-design">
-      <a class="image-card" href="web-design.html"></a>
-        <div class="text-component">
-          <h2 class="image-card__title">Web Design</h2>
-          <p class="image-card__text">View Projects</p>
-        </div>
-      </a>
-      <a class="image-card" href="app-design.html"></a>
-        <div class="text-component">
-          <h2 class="image-card__title">App Design</h2>
-          <p class="image-card__text">View Projects</p>
-        </div>
-      </a>
-      <a class="image-card" href="graphic-design.html"></a>
-        <div class="text-component">
-          <h2 class="image-card__title">Graphic Design</h2>
-          <p class="image-card__text">View Projects</p>
-        </div>
-      </a>
+    <section class="design-services">
+      <div class="image-cards">
+        <a class="image-card" href="web-design.html"></a>
+          <div class="text-component">
+            <h2 class="image-card__title">Web Design</h2>
+            <p class="image-card__text">View Projects</p>
+          </div>
+        </a>
+        <a class="image-card" href="app-design.html"></a>
+          <div class="text-component">
+            <h2 class="image-card__title">App Design</h2>
+            <p class="image-card__text">View Projects</p>
+          </div>
+        </a>
+        <a class="image-card" href="graphic-design.html"></a>
+          <div class="text-component">
+            <h2 class="image-card__title">Graphic Design</h2>
+            <p class="image-card__text">View Projects</p>
+          </div>
+        </a>
+      </div>
     </section>
+
+    <section class="passionate">
+      <div class="icon-cards">
+        <div class="icon-card">
+          <div class="icon-card__icon">
+            <img src="./assets/images/home/desktop/illustration-passionate.svg" alt="man writing on tablet">
+          </div>
+          <h3 class="icon-card__title">Passionate</h3>
+          <p>Each project starts with an in-depth brand research to ensure we only create products that serve a purpose. We merge
+          art, design, and technology into exciting new solutions.</p>
+        </div>
+      </div>
+      <div class="icon-card">
+        <div class="icon-card__icon">
+          <img src="./assets/images/home/desktop/illustration-resourceful.svg" alt="man writing on tablet">
+        </div>
+        <h3 class="icon-card__title">Resourceful</h3>
+        <p>Everything that we do has a strategic purpose. We use an agile approach in all of our projects and value customer
+        collaboration. It guarantees superior results that fulfill our clients’ needs.</p>
+        </div>
+      </div>
+      <div class="icon-card">
+          <div class="icon-card__icon">
+            <img src="./assets/images/home/desktop/illustration-friendly.svg" alt="man writing on tablet">
+          </div>
+          <h3 class="icon-card__title">Friendly</h3>
+          <p>We are a group of enthusiastic folks who know how to put people first. Our success depends on our customers, and we
+          strive to give them the best experience a company can provide.
+          </p>
+        </div>
+      </div>
+    </section>
+
   </main>
 <script src="assets/js/scripts.js"></script>
 </body>
