use container to control content width

--- a/main/index.html
+++ b/main/index.html
@@ -12,12 +12,14 @@
   <div class="content-wrapper">
     <header class="header">
       <nav class="nav">
-        <img class="nav__logo" src="./assets/images/shared/desktop/logo-dark.png" alt="designo logo">
-        <ul class="nav__list">
-          <li><a href="about.html">Our Company</a></li>
-          <li><a href="locations.html">Locations</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
+        <div class="container">
+          <img class="nav__logo" src="./assets/images/shared/desktop/logo-dark.png" alt="designo logo">
+          <ul class="nav__list">
+            <li><a href="about.html">Our Company</a></li>
+            <li><a href="locations.html">Locations</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
       </nav>
       <div class="hero">
         <div class="container">
@@ -34,61 +36,107 @@
   </div>
   <main>
     <section class="design-services">
-      <div class="image-cards">
-        <a class="image-card" href="web-design.html"></a>
-          <div class="text-component">
-            <h2 class="image-card__title">Web Design</h2>
-            <p class="image-card__text">View Projects</p>
-          </div>
-        </a>
-        <a class="image-card" href="app-design.html"></a>
-          <div class="text-component">
-            <h2 class="image-card__title">App Design</h2>
-            <p class="image-card__text">View Projects</p>
-          </div>
-        </a>
-        <a class="image-card" href="graphic-design.html"></a>
-          <div class="text-component">
-            <h2 class="image-card__title">Graphic Design</h2>
-            <p class="image-card__text">View Projects</p>
-          </div>
-        </a>
+      <div class="container">
+        <div class="image-cards">
+          <a class="image-card" href="web-design.html"></a>
+            <div class="text-component">
+              <h2 class="image-card__title">Web Design</h2>
+              <p class="image-card__text">View Projects</p>
+            </div>
+          </a>
+          <a class="image-card" href="app-design.html"></a>
+            <div class="text-component">
+              <h2 class="image-card__title">App Design</h2>
+              <p class="image-card__text">View Projects</p>
+            </div>
+          </a>
+          <a class="image-card" href="graphic-design.html"></a>
+            <div class="text-component">
+              <h2 class="image-card__title">Graphic Design</h2>
+              <p class="image-card__text">View Projects</p>
+            </div>
+          </a>
+        </div>
       </div>
     </section>
 
     <section class="passionate">
-      <div class="icon-cards">
+      <div class="container">
+        <div class="icon-cards">
+          <div class="icon-card">
+            <div class="icon-card__icon">
+              <img src="./assets/images/home/desktop/illustration-passionate.svg" alt="man writing on tablet">
+            </div>
+            <h3 class="icon-card__title">Passionate</h3>
+            <p>Each project starts with an in-depth brand research to ensure we only create products that serve a purpose. We merge
+            art, design, and technology into exciting new solutions.</p>
+          </div>
+        </div>
         <div class="icon-card">
           <div class="icon-card__icon">
-            <img src="./assets/images/home/desktop/illustration-passionate.svg" alt="man writing on tablet">
+            <img src="./assets/images/home/desktop/illustration-resourceful.svg" alt="man writing on tablet">
           </div>
-          <h3 class="icon-card__title">Passionate</h3>
-          <p>Each project starts with an in-depth brand research to ensure we only create products that serve a purpose. We merge
-          art, design, and technology into exciting new solutions.</p>
-        </div>
-      </div>
-      <div class="icon-card">
-        <div class="icon-card__icon">
-          <img src="./assets/images/home/desktop/illustration-resourceful.svg" alt="man writing on tablet">
-        </div>
-        <h3 class="icon-card__title">Resourceful</h3>
-        <p>Everything that we do has a strategic purpose. We use an agile approach in all of our projects and value customer
-        collaboration. It guarantees superior results that fulfill our clients’ needs.</p>
-        </div>
-      </div>
-      <div class="icon-card">
-          <div class="icon-card__icon">
-            <img src="./assets/images/home/desktop/illustration-friendly.svg" alt="man writing on tablet">
+          <h3 class="icon-card__title">Resourceful</h3>
+          <p>Everything that we do has a strategic purpose. We use an agile approach in all of our projects and value customer
+          collaboration. It guarantees superior results that fulfill our clients’ needs.</p>
           </div>
-          <h3 class="icon-card__title">Friendly</h3>
-          <p>We are a group of enthusiastic folks who know how to put people first. Our success depends on our customers, and we
-          strive to give them the best experience a company can provide.
-          </p>
+        </div>
+        <div class="icon-card">
+            <div class="icon-card__icon">
+              <img src="./assets/images/home/desktop/illustration-friendly.svg" alt="man writing on tablet">
+            </div>
+            <h3 class="icon-card__title">Friendly</h3>
+            <p>We are a group of enthusiastic folks who know how to put people first. Our success depends on our customers, and we
+            strive to give them the best experience a company can provide.
+            </p>
+          </div>
         </div>
       </div>
     </section>
 
+    <section class="cta">
+      <div class="container">
+        <div class="wide-card">
+          <div class="text-component">
+            <h2>Let’s talk about your project</h2>
+            <p>Ready to take it to the next level? Contact us today and find out how our expertise can help your business grow.</p>
+          </div>
+          <div class="btn btn--subtle">Get in touch</div>
+        </div>
+      </div>
+    </section>
   </main>
+  <footer class="footer">
+    <div class="container">
+      <nav class="nav">
+        <img class="nav__logo" src="./assets/images/shared/desktop/logo-dark.png" alt="designo logo">
+        <ul class="nav__list">
+          <li><a href="about.html">Our Company</a></li>
+          <li><a href="locations.html">Locations</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+      <div class="contact">
+        <div class="contact__address">
+          <p class="bold">Designo Central Office</p>
+          <p>3886 Wellington Street</p>
+          <p>Toronto, Ontario M9C 3J5</p>
+        </div>
+        <div class="contact__phone">
+          <p class="bold">Contact Us (Central Office)</p>
+          <p class="bold">P : +1 253-863-8967</p>
+          <p class="bold">M : contact@designo.co</p>
+        </div>
+        <div class="contact__social">
+          <img src="./assets/images/shared/desktop/icon-facebook.svg" alt="facebook icon">
+          <img src="./assets/images/shared/desktop/icon-youtube.svg" alt="youtube icon">
+          <img src="./assets/images/shared/desktop/icon-twitter.svg" alt="twitter icon">
+          <img src="./assets/images/shared/desktop/icon-pinterest.svg" alt="pinterest icon">
+          <img src="./assets/images/shared/desktop/icon-instagram.svg" alt="instagram icon">
+        </div>
+      </div>
+    </div>
+  </footer>
 <script src="assets/js/scripts.js"></script>
 </body>
 </html>
