--- a/main/index.html
+++ b/main/index.html
@@ -9,7 +9,7 @@
   <title>Frontend Mentor | Designo Agency Website Challenge</title>
 </head>
 <body>
-  <div class="container container--outer">
+  <div class="container--outer | margin-auto max-width-xl">
     <header class="header">
       <nav class="nav container">
         <img class="nav__logo" src="./assets/images/shared/desktop/logo-dark.png" alt="designo logo">
