--- a/main/index.html
+++ b/main/index.html
@@ -12,7 +12,7 @@
   <div class="container--outer | margin-auto max-width-xl">
     <header class="header">
       <nav class="nav container">
-        <img class="nav__logo" src="./assets/images/shared/desktop/logo-dark.png" alt="designo logo">
+        <div class="nav__logo"><img class="nav__logo" src="./assets/images/shared/desktop/logo-dark.png" alt="designo logo"></div>
         <ul class="nav__list">
           <li><a href="about.html">Our Company</a></li>
           <li><a href="locations.html">Locations</a></li>
