working float navigation and header

--- a/main/index.html
+++ b/main/index.html
@@ -11,22 +11,29 @@
 <body>
   <div class="container--outer | margin-auto max-width-xl">
     <header class="header">
-      <nav class="nav container">
-        <div class="nav__logo"><img class="nav__logo" src="./assets/images/shared/desktop/logo-dark.png" alt="designo logo"></div>
-        <ul class="nav__list">
-          <li><a href="about.html">Our Company</a></li>
-          <li><a href="locations.html">Locations</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-      <div class="hero container">
-        <div class="article text-component">
-          <h1>Award-winning custom designs and digital branding solutions</h1>
-          <p>With over 10 years in the industry, we are experienced in creating fully responsive websites, app design,
-          and engaging brand experiences. Find out more about our services.</p>
-          <a class="btn btn--subtle" href="about.html">Learn more</a>
+      <div class="header__wrapper">
+        <div class="container">
+          <nav class="nav">
+            <div class="nav__logo"><img class="nav__logo" src="./assets/images/shared/desktop/logo-dark.png" alt="designo logo"></div>
+            <ul class="nav__list">
+              <li><a href="about.html">Our Company</a></li>
+              <li><a href="locations.html">Locations</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
         </div>
-        <div class="hero__image"><img src="./assets/images/home/desktop/image-hero-phone.png" alt="mobile phone with image of lamp"></div>
+      </div>
+
+      <div class="hero">
+        <div class="container">
+          <div class="article text-component">
+            <h1>Award-winning custom designs and digital branding solutions</h1>
+            <p>With over 10 years in the industry, we are experienced in creating fully responsive websites, app design,
+            and engaging brand experiences. Find out more about our services.</p>
+            <a class="btn btn--subtle" href="about.html">Learn more</a>
+          </div>
+          <div class="hero__image"><img src="./assets/images/home/desktop/image-hero-phone.png" alt="mobile phone with image of lamp"></div>
+        </div>
       </div>
     </header>
   </div>
