--- a/main/index.html
+++ b/main/index.html
@@ -15,11 +15,14 @@
         <div class="container">
           <nav class="nav">
             <div class="nav__logo"><img class="nav__logo" src="./assets/images/shared/desktop/logo-dark.png" alt="designo logo"></div>
+            <div class="nav__icon nav__icon--open"><img src="./assets/images/shared/mobile/icon-hamburger.svg" alt="menu icon"></div>
+            <div class="nav__icon nav__icon--close"><img src="./assets/images/shared/mobile/icon-close.svg" alt="x icon"></div>
             <ul class="nav__list">
               <li><a href="about.html">Our Company</a></li>
               <li><a href="locations.html">Locations</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
+
           </nav>
         </div>
       </div>
