complete move header to hero

--- a/main/index.html
+++ b/main/index.html
@@ -10,35 +10,33 @@
 </head>
 <body>
   <div class="container--outer | margin-auto max-width-xl">
-    <header class="header">
-      <div class="header__wrapper">
-        <div class="container">
-          <nav class="nav fixed" role="navigation" aria-label="Main">
-            <div class="nav__logo"><img class="nav__logo" src="./assets/images/shared/desktop/logo-dark.png" alt="designo logo"></div>
-            <div class="nav__icon nav__icon--open" aria-label="Open menu"  aria-hidden="true" aria-controls="header-nav-list"><img src="./assets/images/shared/mobile/icon-hamburger.svg" alt="menu icon"></div>
-            <div class="nav__icon nav__icon--close" aria-label="Close menu"  aria-hidden="true" aria-controls="header-nav-list"><img src="./assets/images/shared/mobile/icon-close.svg" alt="x icon"></div>
-            <ul class="nav__list | text-left" id="header-nav-list" aria-expanded="false">
-              <li><a href="about.html">Our Company</a></li>
-              <li><a href="locations.html">Locations</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
-          </nav>
-        </div>
+    <div class="navigation">
+      <div class="container">
+        <nav class="nav fixed" role="navigation" aria-label="Main">
+          <div class="nav__logo"><img class="nav__logo" src="./assets/images/shared/desktop/logo-dark.png" alt="designo logo"></div>
+          <div class="nav__icon nav__icon--open" aria-label="Open menu"  aria-hidden="true" aria-controls="header-nav-list"><img src="./assets/images/shared/mobile/icon-hamburger.svg" alt="menu icon"></div>
+          <div class="nav__icon nav__icon--close" aria-label="Close menu"  aria-hidden="true" aria-controls="header-nav-list"><img src="./assets/images/shared/mobile/icon-close.svg" alt="x icon"></div>
+          <ul class="nav__list | text-left" id="header-nav-list" aria-expanded="false">
+            <li><a href="about.html">Our Company</a></li>
+            <li><a href="locations.html">Locations</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
       </div>
-
-      <div class="hero">
-        <div class="container">
-          <div class="article text-component">
-            <h1>Award-winning custom designs and digital branding solutions</h1>
-            <p>With over 10 years in the industry, we are experienced in creating fully responsive websites, app design,
-            and engaging brand experiences. Find out more about our services.</p>
-            <a class="btn btn--subtle" href="about.html">Learn more</a>
-          </div>
-          <div class="hero__image"><img src="./assets/images/home/desktop/image-hero-phone.png" alt="mobile phone with image of lamp"></div>
+    </div>
+  <header class="header">
+    <div class="hero">
+      <div class="container">
+        <div class="article text-component">
+          <h1>Award-winning custom designs and digital branding solutions</h1>
+          <p>With over 10 years in the industry, we are experienced in creating fully responsive websites, app design,
+          and engaging brand experiences. Find out more about our services.</p>
+          <a class="btn btn--subtle" href="about.html">Learn more</a>
         </div>
+        <div class="hero__image"><img src="./assets/images/home/desktop/image-hero-phone.png" alt="mobile phone with image of lamp"></div>
       </div>
+    </div>
     </header>
-  </div>
   <main>
     <section class="design-services">
       <div class="image-cards container">
@@ -136,6 +134,7 @@
       </div>
     </div>
   </footer>
+  </div>
 <script src="assets/js/scripts.js"></script>
 </body>
 </html>
