change div section

--- a/main/index.html
+++ b/main/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container--outer | margin-auto max-width-xl">
-    <div class="navigation">
+    <section class="navigation">
       <div class="container">
         <nav class="nav fixed" role="navigation" aria-label="Main">
           <div class="nav__logo"><img class="nav__logo" src="./assets/images/shared/desktop/logo-dark.png" alt="designo logo"></div>
@@ -23,7 +23,7 @@
           </ul>
         </nav>
       </div>
-    </div>
+    </section>
   <header class="header">
     <div class="hero">
       <div class="container">
@@ -36,7 +36,7 @@
         <div class="hero__image"><img src="./assets/images/home/desktop/image-hero-phone.png" alt="mobile phone with image of lamp"></div>
       </div>
     </div>
-    </header>
+  </header>
   <main>
     <section class="design-services">
       <div class="image-cards container">
