desktop layout complete

--- a/main/index.html
+++ b/main/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script>document.getElementsByTagName("html")[0].className += " js";</script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500&display=swap" rel="stylesheet">
   <link id="codyframe" rel="stylesheet" href="./assets/css/style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <title>Frontend Mentor | Designo Agency Website Challenge</title>
@@ -33,7 +35,7 @@
           and engaging brand experiences. Find out more about our services.</p>
           <a class="btn btn--subtle" href="about.html">Learn more</a>
         </div>
-        <div class="hero__image"><img src="./assets/images/home/desktop/image-hero-phone.png" alt="mobile phone with image of lamp"></div>
+        <div class="hero__image"></div>
       </div>
     </div>
   </header>
