--- a/main/index.html
+++ b/main/index.html
@@ -29,7 +29,7 @@
   <header class="header">
     <div class="container">
       <div class="hero">
-        <div class="hero__article article text-component | text-center@sm text-left@md">
+        <div class="hero__article article text-component | text-center text-left@md">
           <h1>Award-winning custom designs and digital branding solutions</h1>
           <p>With over 10 years in the industry, we are experienced in creating fully responsive websites, app design,
           and engaging brand experiences. Find out more about our services.</p>
