use container width to make the hero section fill vw

--- a/main/index.html
+++ b/main/index.html
@@ -35,7 +35,7 @@
           and engaging brand experiences. Find out more about our services.</p>
           <a class="btn btn--subtle" href="about.html">Learn more</a>
         </div>
-        <div class="hero__image"></div>
+        <div class="hero__image"><img src="assets/images/home/desktop/image-hero-phone.png" alt=""></div>
       </div>
     </div>
   </header>
