use vw for component padding

--- a/main/index.html
+++ b/main/index.html
@@ -11,7 +11,7 @@
   <title>Frontend Mentor | Designo Agency Website Challenge</title>
 </head>
 <body>
-  <div class="container--outer | margin-auto max-width-xl">
+  <div class="container--outer | margin-auto">
     <section class="navigation">
       <div class="container">
         <nav class="nav fixed" role="navigation" aria-label="Main">
