complete refactoring of navigation

--- a/main/index.html
+++ b/main/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="container--outer | margin-auto">
-    <section class="navigation">
+    <section class="navigation fixed">
       <div class="container">
         <nav class="nav fixed" role="navigation" aria-label="Main">
           <div class="nav__logo"><img class="nav__logo" src="./assets/images/shared/desktop/logo-dark.png" alt="designo logo"></div>
