completed image cards

--- a/main/index.html
+++ b/main/index.html
@@ -46,24 +46,31 @@
         <div class="container">
           <div class="image-cards">
             <a class="image-card" href="web-design.html" id="image-card-web">
-              <div class="text-component">
+              <div class="image-card__body">
                 <h2 class="image-card__title">Web Design</h2>
                 <div class="image-card__cta">
                   <p class="image-card__text">View Projects</p>
-                  <img src="assets/images/shared/desktop/icon-right-arrow.svg" alt="right chevron">
+                  <img class="cta__icon" src="assets/images/shared/desktop/icon-right-arrow.svg" alt="right chevron">
                 </div>
               </div>
             </a>
             <a class="image-card" href="app-design.html" id="image-card-app">
-              <div class="text-component">
+              <div class="image-card__body">
                 <h2 class="image-card__title">App Design</h2>
-                <p class="image-card__text">View Projects</p>
+                <div class="image-card__cta">
+                  <p class="image-card__text">View Projects</p>
+                  <img class="cta__icon" src="assets/images/shared/desktop/icon-right-arrow.svg" alt="right chevron">
+                </div>
               </div>
             </a>
+
             <a class="image-card" href="graphic-design.html" id="image-card-design">
-              <div class="text-component">
+              <div class="image-card__body">
                 <h2 class="image-card__title">Graphic Design</h2>
-                <p class="image-card__text">View Projects</p>
+                <div class="image-card__cta">
+                  <p class="image-card__text">View Projects</p>
+                  <img class="cta__icon" src="assets/images/shared/desktop/icon-right-arrow.svg" alt="right chevron">
+                </div>
               </div>
             </a>
           </div>
