completed mobile image cards

--- a/main/index.html
+++ b/main/index.html
@@ -42,7 +42,7 @@
     </header>
 
     <main>
-      <section class="design-services">
+      <section class="design">
         <div class="container">
           <div class="image-cards">
             <a class="image-card" href="web-design.html" id="image-card-web">
