--- a/main/index.html
+++ b/main/index.html
@@ -125,7 +125,7 @@
 
       <section class="cta">
         <div class="container">
-          <div class="wide-card">
+          <div class="wide-card bg-primary">
             <div class="text-component">
               <h2>Let’s talk about your project</h2>
               <p>Ready to take it to the next level? Contact us today and find out how our expertise can help your business grow.</p>
