--- a/main/index.html
+++ b/main/index.html
@@ -127,8 +127,8 @@
         <div class="container">
           <div class="wide-card bg-primary">
             <div class="text-component">
-              <h2>Let’s talk about your project</h2>
-              <p>Ready to take it to the next level? Contact us today and find out how our expertise can help your business grow.</p>
+              <h2 class="wide-card__title">Let’s talk about your project</h2>
+              <p class="wide-card__text">Ready to take it to the next level? Contact us today and find out how our expertise can help your business grow.</p>
             </div>
             <div class="btn btn--subtle">Get in touch</div>
           </div>
