set height for nav and add border and color for border

--- a/main/index.html
+++ b/main/index.html
@@ -136,7 +136,7 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer bg-black-light">
       <div class="container">
         <nav class="nav">
           <img class="nav__logo" src="./assets/images/shared/desktop/logo-light.png" alt="designo logo">
