--- a/main/index.html
+++ b/main/index.html
@@ -148,14 +148,14 @@
         </nav>
         <div class="contact">
           <div class="contact__address">
-            <p class="bold">Designo Central Office</p>
+            <p class="text-bold">Designo Central Office</p>
             <p>3886 Wellington Street</p>
             <p>Toronto, Ontario M9C 3J5</p>
           </div>
           <div class="contact__phone">
-            <p class="bold">Contact Us (Central Office)</p>
-            <p class="bold">P : +1 253-863-8967</p>
-            <p class="bold">M : contact@designo.co</p>
+            <p class="text-bold">Contact Us (Central Office)</p>
+            <p class="text-bold">P : +1 253-863-8967</p>
+            <p class="text-bold">M : contact@designo.co</p>
           </div>
           <div class="contact__social">
             <img src="./assets/images/shared/desktop/icon-facebook.svg" alt="facebook icon">
