complete footer component

--- a/main/index.html
+++ b/main/index.html
@@ -139,7 +139,9 @@
     <footer class="footer bg-black-light">
       <div class="container">
         <nav class="nav">
-          <img class="nav__logo" src="./assets/images/shared/desktop/logo-light.png" alt="designo logo">
+          <div class="nav__logo__container">
+            <img class="nav__logo" src="./assets/images/shared/desktop/logo-light.png" alt="designo logo">
+          </div>
           <ul class="nav__list | text-center">
             <li><a href="about.html">Our Company</a></li>
             <li><a href="locations.html">Locations</a></li>
@@ -147,12 +149,12 @@
           </ul>
         </nav>
         <div class="contact">
-          <div class="contact__address">
+          <div class="contact__address text-component">
             <p class="text-bold">Designo Central Office</p>
             <p>3886 Wellington Street</p>
             <p>Toronto, Ontario M9C 3J5</p>
           </div>
-          <div class="contact__phone">
+          <div class="contact__phone text-component">
             <p class="text-bold">Contact Us (Central Office)</p>
             <p class="text-bold">P : +1 253-863-8967</p>
             <p class="text-bold">M : contact@designo.co</p>
