add background shapes

--- a/main/index.html
+++ b/main/index.html
@@ -11,7 +11,8 @@
   <title>Frontend Mentor | Designo Agency Website Challenge</title>
 </head>
 <body>
-  <div class="container--outer | margin-auto">
+  <div class="container-outer | margin-auto">
+    <img class="container-outer__img container-outer__img--1" src="assets/images/shared/desktop/bg-pattern-leaf.svg" alt="white leaf shape">
     <section class="navigation fixed">
       <div class="container">
         <nav class="nav fixed" role="navigation" aria-label="Main">
@@ -135,7 +136,7 @@
         </div>
       </section>
     </main>
-
+    <img class="container-outer__img container-outer__img--2 rotate-180" src="assets/images/shared/desktop/bg-pattern-leaf.svg" alt="white leaf shape">
     <footer class="footer bg-black-light">
       <div class="container">
         <nav class="nav">
