--- a/main/web-design.html
+++ b/main/web-design.html
@@ -1,21 +1,81 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script>document.getElementsByTagName("html")[0].className += " js";</script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500&display=swap" rel="stylesheet">
+    <link id="codyframe" rel="stylesheet" href="./assets/css/style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+    <title>Frontend Mentor | Designo Agency Website Challenge</title>
+  </head>
+  <body>
+    <div class="container-outer | margin-auto">
+      <img class="container-outer__img container-outer__img--1" src="assets/images/shared/desktop/bg-pattern-leaf.svg"
+        alt="white leaf shape">
+      <section class="navigation fixed">
+        <div class="container">
+          <nav class="nav fixed" role="navigation" aria-label="Main">
+            <div class="nav__logo"><img class="nav__logo" src="./assets/images/shared/desktop/logo-dark.png" alt="designo logo"></div>
+            <div class="nav__icon nav__icon--open" aria-label="Open menu" aria-hidden="true"
+              aria-controls="header-nav-list"><img src="./assets/images/shared/mobile/icon-hamburger.svg" alt="menu icon">
+            </div>
+            <div class="nav__icon nav__icon--close" aria-label="Close menu" aria-hidden="true"
+              aria-controls="header-nav-list"><img src="./assets/images/shared/mobile/icon-close.svg" alt="x icon"></div>
+            <ul class="nav__list | text-left" id="header-nav-list" aria-expanded="false">
+              <li><a href="about.html">Our Company</a></li>
+              <li><a href="locations.html">Locations</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </section>
+      <main>
+      </main>
+      <img class="container-outer__img container-outer__img--2 rotate-180"src="assets/images/shared/desktop/bg-pattern-leaf.svg" alt="white leaf shape">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Designo Agency Website Challenge</title>
-</head>
-<body>
+      <footer class="footer bg-black-light">
+        <div class="container">
+          <nav class="nav">
+            <div class="nav__logo__container">
+              <img class="nav__logo" src="./assets/images/shared/desktop/logo-light.png" alt="designo logo">
+            </div>
+            <ul class="nav__list | text-center">
+              <li><a href="about.html">Our Company</a></li>
+              <li><a href="locations.html">Locations</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+          <div class="contact">
+            <div class="contact__address text-component">
+              <p class="text-bold">Designo Central Office</p>
+              <p>3886 Wellington Street</p>
+              <p>Toronto, Ontario M9C 3J5</p>
+            </div>
+            <div class="contact__phone text-component">
+              <p class="text-bold">Contact Us (Central Office)</p>
+              <p class="text-bold">P : +1 253-863-8967</p>
+              <p class="text-bold">M : contact@designo.co</p>
+            </div>
+            <div class="contact__social">
+              <img src="./assets/images/shared/desktop/icon-facebook.svg" alt="facebook icon">
+              <img src="./assets/images/shared/desktop/icon-youtube.svg" alt="youtube icon">
+              <img src="./assets/images/shared/desktop/icon-twitter.svg" alt="twitter icon">
+              <img src="./assets/images/shared/desktop/icon-pinterest.svg" alt="pinterest icon">
+              <img src="./assets/images/shared/desktop/icon-instagram.svg" alt="instagram icon">
+            </div>
+          </div>
+        </div>
+      </footer>
+    </div>
   Our Company
   Locations
   Contact
 
   Web design
   We build websites that serve as powerful marketing tools and bring memorable brand experiences.
-  
+
   Express
   A multi-carrier shipping website for ecommerce businesses
 
@@ -36,23 +96,23 @@
 
   App Design
   View Projects
-  
+
   Graphic Design
   View Projects
-  
+
   Let’s talk about your project
-  Ready to take it to the next level? Contact us today and find out how our expertise can help 
+  Ready to take it to the next level? Contact us today and find out how our expertise can help
   your business grow.
   Get in touch
-  
+
   Our company
   Locations
   Contact
-  
+
   Designo Central Office
   3886 Wellington Street
   Toronto, Ontario M9C 3J5
-  
+
   Contact Us (Central Office)
   P : +1 253-863-8967
   M : contact@designo.co
